# optkas-bank-vi

./: .gitignore  README.md  pyproject.toml  requirements.txt
contracts/modules/: _registry.yaml  accredited_investor.md  aml_clause.md  arbitration_clause.md  closing_mechanics.md  conditions_precedent.md  covenants.md  currency_controls.md  definitions.md  escrow_conditions.md  governing_law.md  indemnification.md  limitation_of_liability.md  recitals.md  representations.md  sanctions_compliance.md  security_interest.md  signatory_block.md  (+2 more)
engine/: __init__.py  _icons.py  assembler.py  audit_logger.py  banking_resolver.py  briefing_pack.py  capital_structure.py  cli.py  closing_tracker.py  collateral_verifier.py  compliance_package.py  conflict_matrix.py  correspondent_banking.py  counterparty_dossier.py  cp_resolution.py  deal_classifier.py  deal_dashboard.py  deal_governance.py  deal_lifecycle.py  deal_readiness.py  deal_room.py  escrow_engine.py  evidence_validator.py  execution_checklist.py  exporter.py  fund_flow.py  governance_rules.py  jurisdiction_intel.py  legal_opinion.py  mtn_validator.py  policy.yaml  policy_engine.py  prompt_engine.py  red_flags.py  regulatory_matrix.yaml  regulatory_validator.py  risk_scorer.py  schema_loader.py  settlement_onboarding.py  signing_ceremony.py  (+2 more)
prompts/: master_prompt.md
tests/: test_assembler.py  test_execution.py  test_hardened.py  test_institutional.py  test_phase10.py  test_phase12.py  test_phase6.py  test_phase7.py  test_phase8.py  test_phase9.py  test_prompt_engine.py  test_real_deal.py  test_validator.py
(+22 files in other folders)
